--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,4 +16,14 @@
     </style>
 
     <style name="Theme.Kuit4AndroidPrivate" parent="Base.Theme.Kuit4AndroidPrivate" />
+    
+    <style name="corner_size_8" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">8dp</item>
+    </style>
+
+    <style name="corner_size_4" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">4dp</item>
+    </style>
 </resources>
